--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ ul {
 
 /* Hero Section */
 .hero {
-  background-image: url("assets/images/flx10-gold.png");
+  background-image: url("assets/images/flx10-gold.Png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
